<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TheTVDB</string>
    <string name="empty_list">Oops! No items were found!</string>
    <string name="favorite_shows">Favorite Shows</string>
    <string name="empty_list_favorites">\tYour favorite shows will appear here. Use the search button to locate shows, then add them to your favorites list for quick access.</string>
    <string name="sort">Sort</string>
    <string name="search_hint">Search TheTVDB.com</string>
    <string name="banner_alt_text">Banner</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="seasons_header">Seasons:</string>
    <string name="loading">Loading&#8230;</string>
    <string name="banner_listing_link">View all Images</string>
    <string name="airs">Airs</string>
    <string name="starring">Starring</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="first_aired">First Aired</string>
    <string name="guest_stars">Guest Stars</string>
    <string name="genre">Genre</string>
    <string name="runtime">Run Time</string>
    <string name="imdb">\nView on IMDB</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="stars">stars</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="syncFavsSummaryOn">You\'re favorites are being sync\'ed with your account on thetvdb.com</string>
    <string name="syncFavsSummaryOff">Sync your favorite shows with your account on thetvdb.com. This feature requires you to enter your account identifier above.</string>
</resources>
