<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ProgressBar
	    android:id="@+id/progress_summary"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:indeterminate="true"
	    android:layout_gravity="center" />

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	        
			<ImageView
			    android:id="@+id/series_banner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:adjustViewBounds="true"
			    android:layout_gravity="center_horizontal"
			    android:background="#FFFFFF"
			    android:padding="1dp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="12dp"
			    android:contentDescription="@string/banner_alt_text"
			    android:visibility="gone" />
	
			<TextView
			    android:id="@+id/banner_listing_link"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="right"
			    android:textSize="18sp"
			    android:visibility="gone"
			    android:text="@string/banner_listing_link" />
					
			<TextView
			    android:id="@+id/overview_header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="24sp"
			    android:textColor="@color/header_white"
			    android:visibility="gone"
			    android:text="@string/overview" />
			
			<TextView
			    android:id="@+id/overview"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone" />
			
			<TextView
			    android:id="@+id/airs_header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="24sp"
			    android:textColor="@color/header_white"
			    android:visibility="gone"
			    android:text="@string/airs" />
			
			<TextView
			    android:id="@+id/series_air_info"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone" />
			
			<TextView
			    android:id="@+id/last_episode"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone" />	
			    		
			<TextView
			    android:id="@+id/next_episode"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="12dp"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone" />
	
	
			<TextView
			    android:id="@+id/rating_header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="24sp"
			    android:textColor="@color/header_white"
			    android:visibility="gone"
			    android:text="@string/rating" />
	        
			<TextView
			    android:id="@+id/rating"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone"
			    android:layout_marginBottom="12dp" />
			
			<TextView
			    android:id="@+id/genre_header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="24sp"
			    android:textColor="@color/header_white"
			    android:visibility="gone"
			    android:text="@string/genre" />
			
			<TextView
			    android:id="@+id/genre"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone"
			    android:layout_marginBottom="12dp" />
			
			<TextView
			    android:id="@+id/runtime_header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="24sp"
			    android:textColor="@color/header_white"
			    android:visibility="gone"
			    android:text="@string/runtime" />
			
			<TextView
			    android:id="@+id/runtime"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone"
			    android:layout_marginBottom="12dp" />
	
	
			<TextView
			    android:id="@+id/imdb_link"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp"
			    android:textSize="18sp"
			    android:visibility="gone" />
			
	    </LinearLayout>
	</ScrollView>
    
</FrameLayout>

<!-- 
│──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│                                                  TERMS OF USE: MIT License                                                   │
│                                                  Copyright © 2012 Heath Paddock                                              │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation    │ 
│files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy,    │
│modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software│
│is furnished to do so, subject to the following conditions:                                                                   │
│                                                                                                                              │
│The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.│
│                                                                                                                              │
│THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE          │
│WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR         │
│COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,   │
│ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.                         │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
-->